# bw-mono

./: .gitignore  .npmrc  Cargo.toml  Makefile  README.md  compose.dev.yaml  compose.prod.yaml  drizzle.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.react.json  turbo.json
bw-aggr/: Cargo.toml
bw-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
bw-api/src/: bin.rs  config.rs  error.rs  tracing.rs
bw-api/src/core/charge_bee/: client.rs  item.rs  mod.rs
bw-api/src/core/server/: config.rs  error.rs  mod.rs  trace.rs
bw-api/src/core/tradingview/: client.rs  mod.rs  script.rs
bw-api/src/models/: mod.rs
bw-api/src/models/customer/: mod.rs
bw-api/src/models/invoice/: mod.rs
bw-api/src/router/: invoice.rs  items.rs  mod.rs
bw-web/: Dockerfile  drizzle.config.ts  package-lock.json  package.json  server.js  tailwind.config.ts  tsconfig.node.json  tsconfig.vite.json  vite.config.ts
core/: drizzle.config.ts  package.json  project.json  tsconfig.build.json  tsconfig.json  tsconfig.tsbuildinfo
drizzle/: 0000_dizzy_nextwave.sql  0000_init.sql  0000_lean_maginty.sql  0000_marvelous_princess_powerful.sql  0000_powerful_stark_industries.sql  0000_tense_miss_america.sql  0000_wild_shinko_yamashiro.sql  0001_amused_the_fallen.sql  0001_big_night_nurse.sql  0001_elite_owl.sql  0001_eminent_peter_quill.sql  0001_exotic_talkback.sql  0001_fancy_dazzler.sql  0001_mute_the_hunter.sql  0001_rare_shadowcat.sql  0001_sad_zeigeist.sql  0001_soft_pepper_potts.sql  0001_wet_mister_fear.sql  0002_medical_thanos.sql  (+115 more)
(+726 files in other folders)
