[package]
name = "bw-api"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.21", features = ["derive", "env"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

postgres-rs = { git = "https://github.com/seaszn/postgres-rs" }
dotenv-rs = { git = "https://github.com/seaszn/dotenv-rs" }
rpc-rs = { git = "https://github.com/seaszn/rpc-rs" }

tokio = { version = "1", features = ["full"] }
tungstenite = { version = "0.26.2", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
tokio-tungstenite = { version = "0.26.2", features = [
    "connect",
    "rustls-tls-webpki-roots",
] }

axum = { version = "0.8.1", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }

uuid = { version = "1.16.0", features = ["v4", "serde"] }

log = "0.4.22"
env_logger = "0.11.6"
tracing-loki = "0.2.6"
tracing = "0.1"
tower-service = "0.3.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = [
    "timeout",
    "trace",
    "cors",
    "fs",
] }

base64 = { workspace = true }
humantime = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
lombok = "0.4.0"
chrono = "0.4.42"

[[bin]]
name = "bw-api"
path = "src/bin.rs"
